# hetic-raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  scene.json
scenes/: 01_mirror_balls.json  02_specular_showcase.json  03_shadow_play.json  04_sunset_warmth.json  05_rgb_primary.json  06_abstract_chaos.json  07_matte_world.json  08_diffuse.json
scripts/: commit-msg
src/: main.cpp
src/math/: CMakeLists.txt  Matrix4.hpp  README.md  Ray.hpp  Vec2.hpp
src/math/doc/: notes.md
src/math/include/math/: Intersection.hpp  Transform.hpp  Vec3.hpp
src/nlohmann/: CMakeLists.txt  json.cpp  json.hpp
src/rayimage/: Image.cpp  Image.hpp
src/raymath/: CMakeLists.txt  Color.cpp  Color.hpp  Constants.hpp  Intersection.cpp  Intersection.hpp  Ray.cpp  Ray.hpp  Vec3.cpp  Vec3.hpp
src/rayscene/: CMakeLists.txt  Cube.cpp  Cube.hpp  Light.cpp  Light.hpp  Plane.cpp  Plane.hpp  SceneLoader.cpp  SceneLoader.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  scene.json
src/rayshader/: CMakeLists.txt  DiffuseShader.cpp  DiffuseShader.hpp
src/raytimer/: CMakeLists.txt  Timer.cpp  Timer.hpp
src/render/: Sphere.hpp
src/render/include/render/: Sphere.hpp
tools/: render_cube.cpp  render_plane.cpp  render_sphere.cpp
